PSP/Proyectos/LoginSpring_AdrianSaavedra/src/main/java/org/example/loginspring_adriansaavedra/common/errors/ApiError.java
package org.example.loginspring_adriansaavedra.common.errors;


public record ApiError(String message) {
}
